2000-06-05  Radek Doulik  <rodo@helixcode.com>

	* htmltextmaster.c (html_text_master_magic_link): rewritten using regex
	(html_engine_init_magic): magic links initializations - compiles regexps

2000-06-04  Ariel Rios  <ariel@arcavia.com>

	* htmlengine-edit-table.h: (html_engine_create_table) Added proto.

	* htmlengine-edit-table.c (html_engine_create_table): Create and return a new table.
	(html_engine_insert_table) We now create the table and add rows and cols as required.
	Still need to find a good way to send the cell parameters.

2000-06-03  Ariel Rios  <ariel@arcavia.com>

	* htmlengine-edit-table.c: New file needed to add table editing capabilities.
	(html_engine_insert_table): Creates a new table and paste it.	
	(html_engine_insert_table): Creates and returns a new cell.
	
	* htmlengine-edit-table.h: Ditto.

2000-06-04  Radek Doulik  <rodo@heltixcode.com>

	* htmlengine-edit-insert.c (html_engine_insert): use magic links
	when inserting ' ' or '\n'

	* htmltextmaster.c (html_text_master_magic_link): new function for
	magical text to link morphing (uses paste)

2000-06-02  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlclueflow.c (save): Don't print a newline at the end when
	style is HTML_CLUEFLOW_STYLE_PRE because that causes <pre> to
	duplicate newlines.

2000-06-02  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (html_engine_update_event): remove debugging printf
	for release.

	* htmlengine-edit-delete.c (html_engine_delete): add cast to
	silence warning.
	
2000-06-02  Dan Winship  <danw@helixcode.com>

	* htmlembedded.c (html_embedded_size_recalc): replace a variable
	initialization that got lost yesterday.

2000-06-01  Larry Ewing  <lewing@helixcode.com>

	* htmlclue.c (destroy): rework that last commit to do things
	slightly differently, html_clue_remove had unintended side
	effects.

2000-06-01  Larry Ewing  <lewing@helixcode.com>

	* htmlclue.c (destroy): remove the objects before we destroy them