@@ -25,6 +25,7 @@
 #include "htmltextmaster.h"
 
 #include "htmlengine-cutbuffer.h"
+#include "htmlengine-edit.h"
 #include "htmlengine-edit-clueflowstyle.h"
 #include "htmlengine-edit-cut.h"
 #include "htmlengine-edit-movement.h"
@@ -804,4 +805,22 @@ html_engine_paste_object (HTMLEngine *engine,
 
 	g_list_free (engine->cut_buffer);
 	engine->cut_buffer = tmp_buffer;
+}
+
+void
+html_engine_replace_by_object (HTMLEngine *engine,
+			       HTMLObject *sobj, guint soff,
+			       HTMLObject *eobj, guint eoff,
+			       HTMLObject *new_obj)
+{
+	guint pos = engine->cursor->position;
+
+	html_engine_disable_selection (engine);
+	html_cursor_jump_to (engine->cursor, engine, sobj, soff);
+	html_engine_set_mark (engine);
+	html_cursor_jump_to (engine->cursor, engine, eobj, eoff);
+	html_engine_edit_selection_update_now (engine->selection_updater);
+	html_engine_paste_object (engine, new_obj, TRUE);
+
+	html_cursor_jump_to_position (engine->cursor, engine, pos);
 }
