@@ -23,6 +23,7 @@
 
 #include "htmltext.h"
 #include "htmllinktextmaster.h"
+#include "htmlengine-edit-paste.h"
 
 
 HTMLLinkTextMasterClass html_link_text_master_class;
@@ -239,4 +240,18 @@ html_link_text_master_set_url (HTMLLinkTextMaster *link, const gchar *url)
 {
 	g_free (link->url);
 	link->url = g_strdup (url);
+}
+
+void
+html_link_text_master_to_text (HTMLLinkTextMaster *link, HTMLEngine *e)
+{
+	HTMLTextMaster *new_text;
+
+	new_text = html_text_master_new (HTML_TEXT (link)->text,
+					 GTK_HTML_FONT_STYLE_DEFAULT,
+					 html_settings_get_color (e->settings, HTMLTextColor));
+
+	html_engine_replace_by_object (e, HTML_OBJECT (link), 0,
+				       HTML_OBJECT (link), HTML_TEXT (link)->text_len,
+				       HTML_OBJECT (new_text));
 }
